syntax = "proto2";

import public "common_enum.proto";

package ddproto;

//游戏结束后的统计数据消息
message common_srv_msg_game_count {
    optional uint32 user_id = 1;
    optional common_enum_game game_id = 2;
    optional int32 game_number = 3;
    optional COMMON_ENUM_ROOMTYPE room_type = 4;
    optional int32 room_level = 5;
    optional double bill = 6;
    optional bool is_wine = 7;
    optional string data = 8;
    optional int64 start_time = 9;
    optional int64 end_time = 10;
    optional int32 coin_fee = 11;
}
